--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 							                    <div class="mu-pro-bar mu-wordpress-bar">
 							                    </div>
 
+												<span>NodeJS</span>
+							                    <div class="mu-pro-bar mu-wordpress-bar">
+							                    </div>
+
 						                  	</div>
 
 						                  	<!-- Start Social Media -->
