--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						                  	</div>
 
 						                  	<!-- Download Ressume Button -->
-						                  	<a href="CV_Komara.pdf" class="mu-resume-btn">Download My Resume</a>
+						                  	<a href="assets/CV_KomaraIP.pdf" class="mu-resume-btn">Download My Resume</a>
 
 										</div>
 									</div>
