--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav mu-menu navbar-right">
 			        <li><a href="#">HOME</a></li>
-			        <li><a href="#mu-about">ABOUT US</a></li>
+			        <li><a href="#mu-about">ABOUT ME</a></li>
 			        <li><a href="#mu-service">SERVICES</a></li>
 		            <li><a href="#mu-portfolio">PORTFOLIO</a></li>
 		            <!-- <li><a href="#mu-testimonials">TESTIMONIALS</a></li> -->
@@ -113,12 +113,12 @@
 						<div class="mu-about-area">
 
 							<div class="mu-about-header">
-								<h2 class="mu-heading-title">ABOUT ME</h2>
+								<h2 class="mu-heading-title">ABOUT</h2>
 								<span class="mu-header-dot"></span>
-								<p>Hello! My name is Komara Indra Putra and i'm currently in my second year at BINUS University, where I'm wholeheartedly pursuing a major in Computer Science. 
-									My academic journey has been an exhilarating ride, one that's gone beyond textbooks and lecture halls.
-									I'm an activist of HIMTI, where I've dived into web development and event organization. 
-									These experiences have taught me valuable technical skills and the art of teamwork.
+								<p>
+									Hello! My name is Komara Indra Putra and i'm currently in my second year at BINUS University, 
+									where I'm wholeheartedly pursuing a major in Computer Science is complemented by practical projects and a specialization in UI/UX, 
+									preparing me to contribute effectively to the tech industry.
 								</p>
 							</div>
 
@@ -441,7 +441,7 @@
 												<div class="col-sm-4">
 													<div class="mu-contact-top-single">
 														<div class="mu-icon"><i class="fa fa-envelope"></i></div>
-														<p>komaraindra21@binus.ac.id</p>
+														<p>komaraindra21@gmail.com</p>
 													</div>
 												</div>
 
