--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav mu-menu navbar-right">
 			        <li><a href="#">HOME</a></li>
-			        <li><a href="#mu-about">ABOUT ME</a></li>
+			        <li><a href="#mu-about">ABOUT</a></li>
 			        <li><a href="#mu-service">SERVICES</a></li>
 		            <li><a href="#mu-portfolio">PORTFOLIO</a></li>
 		            <!-- <li><a href="#mu-testimonials">TESTIMONIALS</a></li> -->
