--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="links">
-        <a href="komaraip.my.id" class="item">
+        <a href="https://komaraip.my.id/" class="item">
             <div class="item-wrap">
                 <div>
                     <img src="assets/portfolio.png" >
@@ -29,7 +29,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#e2e8f0" viewBox="0 0 256 256"><path d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"></path></svg>
         </a>
 
-        <a href="linkedin.com/in/komaraip" class="item">
+        <a href="https://www.linkedin.com/in/komaraip" class="item">
             <div class="item-wrap">
                 <div>
                     <img src="assets/linkedin.png" >
@@ -39,7 +39,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#e2e8f0" viewBox="0 0 256 256"><path d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"></path></svg>
         </a>
 
-        <a href="instagram.com/komaraip" class="item">
+        <a href="https://www.instagram.com/komaraip/" class="item">
             <div class="item-wrap">
                 <div>
                     <img src="assets/instagram.png" >
